<resources>


    <string name="app_name">ToDoList</string>
    <string name="welcome_message">Welcome to vincent\'s Todo list</string>
    <string name="add_symbol">+</string>
    <string name="add_item_name">Add todo item name</string>
    <string name="todo_item_name">Enter todo item name</string>
    <string name="text_urgency">Urgent ?</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="item_name">Item name</string>
    <string name="item_urgency">Item urgency</string>
    <string name="item_note">Note</string>
    <string name="edit_item_message">edit todo item</string>


</resources>